external-crates/move/crates/move-compiler/tests/move_2024/typing/signed_int_literal_overflow.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
assertion_line: 285
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E01006]: invalid number literal
  ┌─ tests/move_2024/typing/signed_int_literal_overflow.move:4:22
  │
4 │         let _a: i8 = 128i8;
  │                      ^^^^^ Invalid number literal. The given literal is too large to fit into 'i8'
